src/components/login-panel/login-panel.css
#main-login {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  display: flex;
  justify-content: center;
  align-items: center;
}

#login-panel {
  display: flex;
  flex-direction: column;
  height: 100%;
  width: 100%;
  justify-content: center;
  align-items: center;
  border-right: 1px solid #F5F5F5;
}

#inputs {
  display: flex;
  flex-direction: row;
  align-items: flex-end;
  justify-content: flex-end;
}

